# ChangeLog for media-gfx/gtkimageview
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gtkimageview/ChangeLog,v 1.3 2009/06/07 18:08:03 klausman Exp $

  07 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  gtkimageview-1.6.4.ebuild:
  Keyworded on alpha, bug #272088

  03 Jun 2009; Markus Meier <maekke@gentoo.org> gtkimageview-1.6.4.ebuild:
  add ~amd64, bug #272088

*gtkimageview-1.6.4 (01 Jun 2009)

  01 Jun 2009; Markus Meier <maekke@gentoo.org> +gtkimageview-1.6.4.ebuild,
  +metadata.xml:
  initial import of gtkimageview, ebuild by me
